update code for Java 11